--- a/styles/custom.scss
+++ b/styles/custom.scss
@@ -157,3 +157,9 @@ code, pre, kbd, samp { font-family: ui-monospace, SFMono-Regular, Menlo, Monaco,
 }
 
 
+/* -----------------------------------------
+   Make .text-primary use OSU Scarlet
+   ----------------------------------------- */
+.text-primary {
+  color: #BA0C2F !important;
+}
